--- a/QA_platform/appdir/templates/invitation.html
+++ b/QA_platform/appdir/templates/invitation.html
@@ -25,6 +25,9 @@
         <div class="card-header">
             <ul class="nav nav-tabs card-header-tabs">
                 <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('questions',type='official') }}">Official</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('questions',type='hot') }}">Hot</a>
                 </li>
                 <li class="nav-item">
