--- a/QA_platform/appdir/templates/base.html
+++ b/QA_platform/appdir/templates/base.html
@@ -7,7 +7,7 @@
     {% if title %}
         <title>{{ title }}</title>
     {% else %}
-        <title>Arino - Q&A platform</title>
+        <title>3ZL - Q&A platform</title>
     {% endif %}
 
     <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
@@ -123,7 +123,7 @@
         <img src="../static/image/bootstrap-icon/question-circle.svg" width="30" height="30"
              class="d-inline-block align-top"
              alt="" loading="lazy">
-        ZZDH
+        3ZL
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
