--- a/QA_platform/appdir/templates/index.html
+++ b/QA_platform/appdir/templates/index.html
@@ -20,7 +20,7 @@
                 <div class="carousel-item active">
                     <div class="jumbotron text-center">
                         <div class="container">
-                            <h1 class="display-3">Welcome to ZZDH</h1>
+                            <h1 class="display-3">Welcome to 3ZL</h1>
                             <p>You can find or ask anything you want to know about the university of Southampton.</p>
                             <p><a class="btn btn-outline-primary btn-lg invisible" href="#" role="button">Start now
                                 &raquo;</a>
