--- a/QA_platform/appdir/templates/official.html
+++ b/QA_platform/appdir/templates/official.html
@@ -38,8 +38,8 @@
             </ul>
         </div>
         <div class="card-body">
-            <h5 class="card-title">Hot questions</h5>
-            <p class="card-text">These are the official questions at the moment.</p>
+            <h5 class="card-title">Official questions</h5>
+            <p class="card-text">These are the official questions.</p>
             {% for question in questions %}
                 <div class="card text-left">
                     <h5 class="card-header">
