--- a/QA_platform/appdir/templates/hot.html
+++ b/QA_platform/appdir/templates/hot.html
@@ -39,7 +39,7 @@
         </div>
         <div class="card-body">
             <h5 class="card-title">Hot questions</h5>
-            <p class="card-text">These are the hottest questions at the moment.</p>
+            <p class="card-text">These are the official questions at the moment.</p>
             {% for question in questions %}
                 <div class="card text-left">
                     <h5 class="card-header">
