--- a/QA_platform/appdir/templates/index.html
+++ b/QA_platform/appdir/templates/index.html
@@ -31,8 +31,8 @@
                 <div class="carousel-item">
                     <div class="jumbotron text-center">
                         <div class="container">
-                            <h1 class="display-3">Rich content</h1>
-                            <p>This website is all-inclusive, you can find any answer you want.</p>
+                            <h1 class="display-3">Advertisement 1 for business</h1>
+                            <p>Here would be an advertisement.</p>
                             <p><a class="btn btn-outline-primary btn-lg hide invisible" href="#" role="button">Start now
                                 &raquo;</a></p>
                             </p>
@@ -42,9 +42,8 @@
                 <div class="carousel-item">
                     <div class="jumbotron text-center">
                         <div class="container">
-                            <h1 class="display-3">Beautiful UI</h1>
-                            <p>Humanized design and attractive appearance allow you to enjoy the process of learning
-                                knowledge.</p>
+                            <h1 class="display-3">Advertisement 2 for business</h1>
+                            <p>Here would be an advertisement.</p>
                             <p><a class="btn btn-outline-primary btn-lg" href="{{ url_for('questions',type='hot') }}"
                                   role="button">Start
                                 now &raquo;</a>
